[package]
name = "porpoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"
swagger = "6.4.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.18"

[[bin]]
name = "server"
path = "src/server.rs"