[package]
name = "porpoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
axum = "0.7.4"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = "0.12.2"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
swagger = "6.4.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[[bin]]
name = "porpoise"
path = "src/server.rs"